--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <table>
             <thead>
                 <tr>
-                    <th class="name-col">Student Name</th>
+                    <th class="name-col-head">Student Name</th>
                     <th>1</th>
                     <th>2</th>
                     <th>3</th>
@@ -28,7 +28,7 @@
                     <th>10</th>
                     <th>11</th>
                     <th>12</th>
-                    <th class="missed-col">Days Missed-col</th>
+                    <th class="missed-col-head">Days Missed-col</th>
                 </tr>
             </thead>
             <tbody>
@@ -46,7 +46,7 @@
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
-                    <td class="missed-col">0</td>
+                    <td class="missed-col">12</td>
                 </tr>
                 <tr class="student">
                     <td class="name-col">Lilly the Lizard</td>
@@ -62,7 +62,7 @@
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
-                    <td class="missed-col">0</td>
+                    <td class="missed-col">12</td>
                 </tr>
                 <tr class="student">
                     <td class="name-col">Paulrus the Walrus</td>
@@ -78,7 +78,7 @@
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
-                    <td class="missed-col">0</td>
+                    <td class="missed-col">12</td>
                 </tr>
                 <tr class="student">
                     <td class="name-col">Gregory the Goat</td>
@@ -94,7 +94,7 @@
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
-                    <td class="missed-col">0</td>
+                    <td class="missed-col">12</td>
                 </tr>
                 <tr class="student">
                     <td class="name-col">Adam the Anaconda</td>
@@ -110,12 +110,12 @@
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
-                    <td class="missed-col">0</td>
+                    <td class="missed-col">12</td>
                 </tr>
             </tbody>
         </table>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="js/app.js"></script>
+        <script src="js/refactor.js"></script>
     </body>
 </html>
